--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.26",
     "@types/sequelize": "^4.28.20",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
