--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.26",
     "@types/sequelize": "^4.28.20",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "socket.io": "^4.7.5"
   }
 }
