--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.26",
@@ -23,7 +24,9 @@
     "aws-sdk": "^2.1582.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "corn": "^0.0.1",
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "http": "^0.0.1-security",
