--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cron": "^2.4.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.26",
     "@types/sequelize": "^4.28.20",
@@ -32,6 +33,7 @@
     "express": "^4.18.3",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
